<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/app_action_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#5AE3F5"
    android:minHeight="50dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <Button
            android:id="@+id/mapViewButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@drawable/map_pin_img" />

        <Button
            android:id="@+id/userProfileButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_row="0"
            android:layout_column="3"
            android:background="@drawable/user_profile_img" />

    </GridLayout>

</androidx.appcompat.widget.Toolbar>