<resources>
    <string name="no_name">NoName</string>
    <string name="app_name">inSight</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Signup</string>
    <string name="confirm_password">confirm password</string>
    <string name="passwordSingup">password</string>
    <string name="password">*****</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="back">Back</string>
    <string name="log_out">Logout</string>
    <string name="latest_entries">Latest Entries</string>
    <string name="check_in">Check-in</string>
    <string name="title_activity_maps">Map</string>
    <string name="post_comment">Post comment</string>
    <string name="write_your_comment_here">Write your comment here …</string>
    <string name="gallery">Gallery</string>
    <string name="comments">Comments</string>
    <string name="your_profile">My Profile</string>
    <string name="exchange_points">Exchange Points</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="logoutWarning">Are you sure you want \nto log out?</string>
    <string name="my_comments">My Comments</string>
    <string name="my_pictures">My Pictures</string>
    <string name="Exchange">Exchange</string>
</resources>
